--- a/plugin/src/styles.css
+++ b/plugin/src/styles.css
@@ -1,3 +1,20 @@
+
+/* TODO fix obsidian.css vars? or copy classes like this? */
+
+/* input[type=checkbox] {
+  -webkit-appearance: none;
+  appearance: none;
+  border-radius: 4px;
+  border: 1px solid #ababab;
+  flex-shrink: 0;
+  padding: 0;
+  margin: 0 6px 0 0;
+  width: 17px;
+  height: 17px;
+  position: relative;
+  transition: box-shadow .15s ease-in-out;
+} */
+
 /* @tailwind base; geht nicht, überschreibt Obsidian Kram */
 @tailwind components;
 @tailwind utilities;
